# SeeElEye

./: .gitignore  Cargo.toml
src/: libs.rs  main.rs
src/libs/: execution_ui.rs  python.rs  select_ui.rs  structs.rs  ui.rs  utils.rs
static/: fake_process.py  favicon.py  http_redirect_https.py  sample_script.py  test_script.py
static/lib/: args.py
